extension/src/components/CodeResult.css
.run-navigation {
    position: relative;
    margin-bottom: 0.5rem;
    color: var(--font-color);
  }
  
  .running-status {
    background: #428bca;
    color: white;
    padding: 0.1rem 0.5rem;
    margin-left: 1rem;
    border-radius: 5px;
  }
  #code_submit_form{
    display:flex
  }
  .introd{
    user-select: none;
    font-size: 14px;
    padding-left: 5px;
    color: darkgray;
  }
  .code_nav{
    position: absolute;
    right: 0;
    top: 0;
    display:flex;
    gap:5px;
  }
  .code_submit_button{
    filter: hue-rotate(270deg)
  }
  .code_button:disabled, .code_submit_button:disabled {
    opacity: 0.5; 
    pointer-events: none;
  }
  .code_button, .code_submit_button {
    height: min-content;
    padding: 5px 15px;
    border: 0;
    color: #fff;
    background-color: #428bca;
    font-size: 12px;
  }
  .run-result-list pre{
    background-color: var(--background-color);
    color: var(--font-color-200);
  }
  .run-result-list {
    background: var(--editor-color);
    overflow-y: scroll;
    color: white;
    height: calc(100% - 70px);
    border: 1px solid var(--edge-color);
  }
  #resize-horizontal {
    cursor: row-resize;
    height: var(--resize-bar);
    border-top: 1px solid var(--background-color);
    border-bottom: 1px solid var(--background-color);
    background-color: var(--background-color);
  }
  #resize-vertical {
    position: absolute;
    cursor: col-resize;
    width: var(--resize-bar);
    height: 100%;
    background-color: var(--background-color);
    top: 0;
    left: 0;
  }
  

